--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,5 +1,17 @@
+name: Test Action
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   test:
+    runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
       - name: bhavani.balan@straive.com
         run: echo "Hello, world!"
